# NFA_Aerosol

./: Notes for publishing.txt  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  python-publish.yml
Guides and Examples/: Example 1 - Simple timeseries plot.ipynb  Example 2 - Time Adjustments.ipynb  Example 3 - PM levels.ipynb  Example 4 - Time and Task Segmentation.ipynb  Example 5 - Total number concentration instruments.ipynb  Example 6 - Direct Comparison.ipynb  Guide.ipynb
Guides and Examples/Example Data/: CPC.txt  Grimm.txt  Nanoscan1.csv  Nanoscan2.csv  OPS_1.txt
src/NFA_Aerosol/: Instrument_Lib.py  Plot_Lib.py  Utility_Lib.py
