[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"
]
dependencies = [
    "matplotlib>=3.1.3",
    "numpy>=1.20.0",
    "packaging",
    "scipy>=1.5.0",
    "pandas>=1.5.3",
]
description = "Data handling for Aerosol Instruments and Gas analyzers"
dynamic = ["version"]
keywords = [
    "Aerosol"
    "Particle"
    "Instrument"
    "Gas Analyzer"
    "Dust"
    "data analysis",
    "numpy",
    "python",
    "scipy",
]
name = "NFA_Aerosol"
readme = "README.md"
requires-python = ">=3.8"
